--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
         background-color: #eef8e4;
         //background-color: #e4f4d5;
         color: #dab83a;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 88vh;
+      }
+
+      div {
+        display: flex;
       }
     </style>
   </head>
   <body>
+    <div>
       <a id="steam" href="https://steamcommunity.com/id/frokzapaan" target="_blank"><img src="steam-mark/steam.png" alt="Profil Steam" height="auto" width="64"/></a>
       <a id="github" href="https://github.com/zapaan" target="_blank"><img src="github-mark/github-mark.png" alt="Profil Github" height="auto" width="64"/></a>
       <a id="discord" href="https://discord.com/users/688405052515549210" target="_blank"><img src="discord-mark/discord-black.png" alt="Profil Discord" height="auto" width="64"/>Zapaan#0133</a>
+    </div>
   </body>
 </html>
